force-app/main/default/objects/Surgeon_Targets__c/Surgeon_Targets__c.object-meta.xml
<CustomObject>
    <label>Surgeon Target Profile</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Surgeon Targets Profile</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surgeon Target Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>