force-app/main/default/objects/Surgeon_Targets__c/fields/Health_Care_Facility__c.field-meta.xml
<CustomField>
    <fullName>Health_Care_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Health Care Facility</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Healthcare Facility, Medical Practice</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Surgeon_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>