force-app/main/default/objects/Surgeon_Targets__c/fields/Surgeon_Hips_Segment__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_Hips_Segment__c</fullName>
    <label>Surgeon Hips Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>