force-app/main/default/objects/Surgeon_Targets__c/fields/Surgeon_Target_Opp__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_Target_Opp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Surgeon Target Opp</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Surgeon_Target_Opps</relationshipName>
    <type>Lookup</type>
</CustomField>