force-app/main/default/objects/Surgeon_Targets__c/fields/Surgeon_User_Details_x__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_User_Details_x__c</fullName>
    <label>Surgeon User Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Surgeon_User_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Competitive PKA User – wants to do more w/ROSA</fullName>
            </value>
            <value>
                <fullName>Competitive PKA User – wants to do more wo/ROSA</fullName>
            </value>
            <value>
                <fullName>Conventional PPK user w/ROSA</fullName>
            </value>
            <value>
                <fullName>Conventional PKA Zealots w/ROSA</fullName>
            </value>
            <value>
                <fullName>Conventional PKA Zealot wo/Technology</fullName>
            </value>
            <value>
                <fullName>ZB Gold (DePuy) present</fullName>
            </value>
            <value>
                <fullName>ROSA not present</fullName>
            </value>
            <value>
                <fullName>ZB Gold (DePuy) not present</fullName>
            </value>
            <value>
                <fullName>ROSA present</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>