force-app/main/default/objects/Surgeon_Targets__c/fields/Surgeon_User_Type__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_User_Type__c</fullName>
    <label>Surgeon User Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Casual User</fullName>
            </value>
            <value>
                <fullName>Mid-Volume</fullName>
            </value>
            <value>
                <fullName>High-Volume</fullName>
            </value>
            <value>
                <fullName>On the Fence</fullName>
            </value>
            <value>
                <fullName>ROSA Advantage</fullName>
            </value>
            <value>
                <fullName>Velys Advantage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>