force-app/main/default/objects/Surgeon_Targets__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Health_Care_Facility__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Physician__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>